src/parser/y.output
Terminals unused in grammar

   _break
   _else
   _false
   _for
   _if
   _println
   _return
   _true
   _void
   _while
   _greatereequal
   _epsilon


Rules useless in parser due to conflicts

   59 Lvalue: Lvalue _assignop Expr


State 49 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 70 conflicts: 3 shift/reduce
State 118 conflicts: 19 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: Decl

    2 Decl: %empty
    3     | VariableDecl
    4     | ClassDecl
    5     | InterfaceDecl
    6     | FunctionDecl

    7 VariableDecl: Variable _semicolon

    8 Variable: Type _id

    9 Type: _double
   10     | _int
   11     | _boolean
   12     | _string
   13     | Type _leftbracket _rightbracket
   14     | _id

   15 ClassDecl: _class _id ExtendClass ImplementClass _leftbrace Field _rightbrace Decl

   16 ExtendClass: _extends _id
   17            | %empty

   18 ImplementClass: _implements ImplInterface
   19               | %empty

   20 ImplInterface: _id
   21              | _id _comma ImplInterface

   22 InterfaceDecl: _interface _id _leftbrace Prototype _rightbrace Decl

   23 Prototype: Type _id _leftparen Formals _rightparen _semicolon Prototype
   24          | %empty

   25 Formals: Variable
   26        | Variable _comma Formals
   27        | %empty

   28 Field: VariableDecl

   29 FunctionDecl: Type _id _leftparen Formals _rightparen StmtBlock Decl

   30 StmtBlock: _leftparen StmtDeclares Stmt _rightparen

   31 StmtDeclares: VariableDecl
   32             | %empty

   33 Stmt: Expr _semicolon Stmt
   34     | %empty

   35 Expr: Lvalue _assignop Expr
   36     | Constant
   37     | Lvalue
   38     | Call
   39     | Expr _plus Expr
   40     | Expr _minus Expr
   41     | Expr _multiplication Expr
   42     | Expr _division Expr
   43     | Expr _mod Expr
   44     | _minus Expr
   45     | Expr _less Expr
   46     | Expr _lessequal Expr
   47     | Expr _greater Expr
   48     | Expr _greaterequal Expr
   49     | Expr _equal Expr
   50     | Expr _notequal Expr
   51     | Expr _and Expr
   52     | Expr _or Expr
   53     | _not Expr
   54     | _readln _leftparen _rightparen
   55     | _newarray _leftparen _intconstant _comma Type _rightparen

   56 Lvalue: _id
   57       | Lvalue _leftbracket Expr _rightbracket
   58       | Lvalue _period _id
   59       | Lvalue _assignop Expr

   60 Call: _id _leftparen Actuals _rightparen
   61     | _id _period _id _leftparen Actuals _rightparen

   62 Actuals: Expr

   63 Constant: _intconstant
   64         | _doubleconstant
   65         | _stringconstant
   66         | _booleanconstant


Terminals, with rules where they appear

$end (0) 0
error (256)
_boolean (258) 11
_break (259)
_class (260) 15
_double (261) 9
_else (262)
_extends (263) 16
_false (264)
_for (265)
_if (266)
_implements (267) 18
_int (268) 10
_interface (269) 22
_newarray (270) 55
_println (271)
_readln (272) 54
_return (273)
_string (274) 12
_true (275)
_void (276)
_while (277)
_plus (278) 39
_minus (279) 40 44
_multiplication (280) 41
_division (281) 42
_mod (282) 43
_less (283) 45
_lessequal (284) 46
_greater (285) 47
_greatereequal (286)
_equal (287) 49
_notequal (288) 50
_and (289) 51
_or (290) 52
_not (291) 53
_assignop (292) 35 59
_semicolon (293) 7 23 33
_comma (294) 21 26 55
_period (295) 58 61
_leftparen (296) 23 29 30 54 55 60 61
_rightparen (297) 23 29 30 54 55 60 61
_leftbracket (298) 13 57
_rightbracket (299) 13 57
_leftbrace (300) 15 22
_rightbrace (301) 15 22
_intconstant (302) 55 63
_doubleconstant (303) 64
_stringconstant (304) 65
_booleanconstant (305) 66
_id (306) 8 14 15 16 20 21 22 23 29 56 58 60 61
_epsilon (307)
_greaterequal (308) 48


Nonterminals, with rules where they appear

$accept (54)
    on left: 0
Program (55)
    on left: 1, on right: 0
Decl (56)
    on left: 2 3 4 5 6, on right: 1 15 22 29
VariableDecl (57)
    on left: 7, on right: 3 28 31
Variable (58)
    on left: 8, on right: 7 25 26
Type (59)
    on left: 9 10 11 12 13 14, on right: 8 13 23 29 55
ClassDecl (60)
    on left: 15, on right: 4
ExtendClass (61)
    on left: 16 17, on right: 15
ImplementClass (62)
    on left: 18 19, on right: 15
ImplInterface (63)
    on left: 20 21, on right: 18 21
InterfaceDecl (64)
    on left: 22, on right: 5
Prototype (65)
    on left: 23 24, on right: 22 23
Formals (66)
    on left: 25 26 27, on right: 23 26 29
Field (67)
    on left: 28, on right: 15
FunctionDecl (68)
    on left: 29, on right: 6
StmtBlock (69)
    on left: 30, on right: 29
StmtDeclares (70)
    on left: 31 32, on right: 30
Stmt (71)
    on left: 33 34, on right: 30 33
Expr (72)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55, on right: 33 35 39 40 41 42 43 44 45 46 47 48 49 50 51
    52 53 57 59 62
Lvalue (73)
    on left: 56 57 58 59, on right: 35 37 57 58 59
Call (74)
    on left: 60 61, on right: 38
Actuals (75)
    on left: 62, on right: 60 61
Constant (76)
    on left: 63 64 65 66, on right: 36


State 0

    0 $accept: . Program $end

    _boolean    shift, and go to state 1
    _class      shift, and go to state 2
    _double     shift, and go to state 3
    _int        shift, and go to state 4
    _interface  shift, and go to state 5
    _string     shift, and go to state 6
    _id         shift, and go to state 7

    $default  reduce using rule 2 (Decl)

    Program        go to state 8
    Decl           go to state 9
    VariableDecl   go to state 10
    Variable       go to state 11
    Type           go to state 12
    ClassDecl      go to state 13
    InterfaceDecl  go to state 14
    FunctionDecl   go to state 15


State 1

   11 Type: _boolean .

    $default  reduce using rule 11 (Type)


State 2

   15 ClassDecl: _class . _id ExtendClass ImplementClass _leftbrace Field _rightbrace Decl

    _id  shift, and go to state 16


State 3

    9 Type: _double .

    $default  reduce using rule 9 (Type)


State 4

   10 Type: _int .

    $default  reduce using rule 10 (Type)


State 5

   22 InterfaceDecl: _interface . _id _leftbrace Prototype _rightbrace Decl

    _id  shift, and go to state 17


State 6

   12 Type: _string .

    $default  reduce using rule 12 (Type)


State 7

   14 Type: _id .

    $default  reduce using rule 14 (Type)


State 8

    0 $accept: Program . $end

    $end  shift, and go to state 18


State 9

    1 Program: Decl .

    $default  reduce using rule 1 (Program)


State 10

    3 Decl: VariableDecl .

    $default  reduce using rule 3 (Decl)


State 11

    7 VariableDecl: Variable . _semicolon

    _semicolon  shift, and go to state 19


State 12

    8 Variable: Type . _id
   13 Type: Type . _leftbracket _rightbracket
   29 FunctionDecl: Type . _id _leftparen Formals _rightparen StmtBlock Decl

    _leftbracket  shift, and go to state 20
    _id           shift, and go to state 21


State 13

    4 Decl: ClassDecl .

    $default  reduce using rule 4 (Decl)


State 14

    5 Decl: InterfaceDecl .

    $default  reduce using rule 5 (Decl)


State 15

    6 Decl: FunctionDecl .

    $default  reduce using rule 6 (Decl)


State 16

   15 ClassDecl: _class _id . ExtendClass ImplementClass _leftbrace Field _rightbrace Decl

    _extends  shift, and go to state 22

    $default  reduce using rule 17 (ExtendClass)

    ExtendClass  go to state 23


State 17

   22 InterfaceDecl: _interface _id . _leftbrace Prototype _rightbrace Decl

    _leftbrace  shift, and go to state 24


State 18

    0 $accept: Program $end .

    $default  accept


State 19

    7 VariableDecl: Variable _semicolon .

    $default  reduce using rule 7 (VariableDecl)


State 20

   13 Type: Type _leftbracket . _rightbracket

    _rightbracket  shift, and go to state 25


State 21

    8 Variable: Type _id .
   29 FunctionDecl: Type _id . _leftparen Formals _rightparen StmtBlock Decl

    _leftparen  shift, and go to state 26

    $default  reduce using rule 8 (Variable)


State 22

   16 ExtendClass: _extends . _id

    _id  shift, and go to state 27


State 23

   15 ClassDecl: _class _id ExtendClass . ImplementClass _leftbrace Field _rightbrace Decl

    _implements  shift, and go to state 28

    $default  reduce using rule 19 (ImplementClass)

    ImplementClass  go to state 29


State 24

   22 InterfaceDecl: _interface _id _leftbrace . Prototype _rightbrace Decl

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    $default  reduce using rule 24 (Prototype)

    Type       go to state 30
    Prototype  go to state 31


State 25

   13 Type: Type _leftbracket _rightbracket .

    $default  reduce using rule 13 (Type)


State 26

   29 FunctionDecl: Type _id _leftparen . Formals _rightparen StmtBlock Decl

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    $default  reduce using rule 27 (Formals)

    Variable  go to state 32
    Type      go to state 33
    Formals   go to state 34


State 27

   16 ExtendClass: _extends _id .

    $default  reduce using rule 16 (ExtendClass)


State 28

   18 ImplementClass: _implements . ImplInterface

    _id  shift, and go to state 35

    ImplInterface  go to state 36


State 29

   15 ClassDecl: _class _id ExtendClass ImplementClass . _leftbrace Field _rightbrace Decl

    _leftbrace  shift, and go to state 37


State 30

   13 Type: Type . _leftbracket _rightbracket
   23 Prototype: Type . _id _leftparen Formals _rightparen _semicolon Prototype

    _leftbracket  shift, and go to state 20
    _id           shift, and go to state 38


State 31

   22 InterfaceDecl: _interface _id _leftbrace Prototype . _rightbrace Decl

    _rightbrace  shift, and go to state 39


State 32

   25 Formals: Variable .
   26        | Variable . _comma Formals

    _comma  shift, and go to state 40

    $default  reduce using rule 25 (Formals)


State 33

    8 Variable: Type . _id
   13 Type: Type . _leftbracket _rightbracket

    _leftbracket  shift, and go to state 20
    _id           shift, and go to state 41


State 34

   29 FunctionDecl: Type _id _leftparen Formals . _rightparen StmtBlock Decl

    _rightparen  shift, and go to state 42


State 35

   20 ImplInterface: _id .
   21              | _id . _comma ImplInterface

    _comma  shift, and go to state 43

    $default  reduce using rule 20 (ImplInterface)


State 36

   18 ImplementClass: _implements ImplInterface .

    $default  reduce using rule 18 (ImplementClass)


State 37

   15 ClassDecl: _class _id ExtendClass ImplementClass _leftbrace . Field _rightbrace Decl

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    VariableDecl  go to state 44
    Variable      go to state 11
    Type          go to state 33
    Field         go to state 45


State 38

   23 Prototype: Type _id . _leftparen Formals _rightparen _semicolon Prototype

    _leftparen  shift, and go to state 46


State 39

   22 InterfaceDecl: _interface _id _leftbrace Prototype _rightbrace . Decl

    _boolean    shift, and go to state 1
    _class      shift, and go to state 2
    _double     shift, and go to state 3
    _int        shift, and go to state 4
    _interface  shift, and go to state 5
    _string     shift, and go to state 6
    _id         shift, and go to state 7

    $default  reduce using rule 2 (Decl)

    Decl           go to state 47
    VariableDecl   go to state 10
    Variable       go to state 11
    Type           go to state 12
    ClassDecl      go to state 13
    InterfaceDecl  go to state 14
    FunctionDecl   go to state 15


State 40

   26 Formals: Variable _comma . Formals

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    $default  reduce using rule 27 (Formals)

    Variable  go to state 32
    Type      go to state 33
    Formals   go to state 48


State 41

    8 Variable: Type _id .

    $default  reduce using rule 8 (Variable)


State 42

   29 FunctionDecl: Type _id _leftparen Formals _rightparen . StmtBlock Decl

    _leftparen  shift, and go to state 49

    StmtBlock  go to state 50


State 43

   21 ImplInterface: _id _comma . ImplInterface

    _id  shift, and go to state 35

    ImplInterface  go to state 51


State 44

   28 Field: VariableDecl .

    $default  reduce using rule 28 (Field)


State 45

   15 ClassDecl: _class _id ExtendClass ImplementClass _leftbrace Field . _rightbrace Decl

    _rightbrace  shift, and go to state 52


State 46

   23 Prototype: Type _id _leftparen . Formals _rightparen _semicolon Prototype

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    $default  reduce using rule 27 (Formals)

    Variable  go to state 32
    Type      go to state 33
    Formals   go to state 53


State 47

   22 InterfaceDecl: _interface _id _leftbrace Prototype _rightbrace Decl .

    $default  reduce using rule 22 (InterfaceDecl)


State 48

   26 Formals: Variable _comma Formals .

    $default  reduce using rule 26 (Formals)


State 49

   30 StmtBlock: _leftparen . StmtDeclares Stmt _rightparen

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    _id       [reduce using rule 32 (StmtDeclares)]
    $default  reduce using rule 32 (StmtDeclares)

    VariableDecl  go to state 54
    Variable      go to state 11
    Type          go to state 33
    StmtDeclares  go to state 55


State 50

   29 FunctionDecl: Type _id _leftparen Formals _rightparen StmtBlock . Decl

    _boolean    shift, and go to state 1
    _class      shift, and go to state 2
    _double     shift, and go to state 3
    _int        shift, and go to state 4
    _interface  shift, and go to state 5
    _string     shift, and go to state 6
    _id         shift, and go to state 7

    $default  reduce using rule 2 (Decl)

    Decl           go to state 56
    VariableDecl   go to state 10
    Variable       go to state 11
    Type           go to state 12
    ClassDecl      go to state 13
    InterfaceDecl  go to state 14
    FunctionDecl   go to state 15


State 51

   21 ImplInterface: _id _comma ImplInterface .

    $default  reduce using rule 21 (ImplInterface)


State 52

   15 ClassDecl: _class _id ExtendClass ImplementClass _leftbrace Field _rightbrace . Decl

    _boolean    shift, and go to state 1
    _class      shift, and go to state 2
    _double     shift, and go to state 3
    _int        shift, and go to state 4
    _interface  shift, and go to state 5
    _string     shift, and go to state 6
    _id         shift, and go to state 7

    $default  reduce using rule 2 (Decl)

    Decl           go to state 57
    VariableDecl   go to state 10
    Variable       go to state 11
    Type           go to state 12
    ClassDecl      go to state 13
    InterfaceDecl  go to state 14
    FunctionDecl   go to state 15


State 53

   23 Prototype: Type _id _leftparen Formals . _rightparen _semicolon Prototype

    _rightparen  shift, and go to state 58


State 54

   31 StmtDeclares: VariableDecl .

    $default  reduce using rule 31 (StmtDeclares)


State 55

   30 StmtBlock: _leftparen StmtDeclares . Stmt _rightparen

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    $default  reduce using rule 34 (Stmt)

    Stmt      go to state 68
    Expr      go to state 69
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 56

   29 FunctionDecl: Type _id _leftparen Formals _rightparen StmtBlock Decl .

    $default  reduce using rule 29 (FunctionDecl)


State 57

   15 ClassDecl: _class _id ExtendClass ImplementClass _leftbrace Field _rightbrace Decl .

    $default  reduce using rule 15 (ClassDecl)


State 58

   23 Prototype: Type _id _leftparen Formals _rightparen . _semicolon Prototype

    _semicolon  shift, and go to state 73


State 59

   55 Expr: _newarray . _leftparen _intconstant _comma Type _rightparen

    _leftparen  shift, and go to state 74


State 60

   54 Expr: _readln . _leftparen _rightparen

    _leftparen  shift, and go to state 75


State 61

   44 Expr: _minus . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 76
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 62

   53 Expr: _not . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 77
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 63

   63 Constant: _intconstant .

    $default  reduce using rule 63 (Constant)


State 64

   64 Constant: _doubleconstant .

    $default  reduce using rule 64 (Constant)


State 65

   65 Constant: _stringconstant .

    $default  reduce using rule 65 (Constant)


State 66

   66 Constant: _booleanconstant .

    $default  reduce using rule 66 (Constant)


State 67

   56 Lvalue: _id .
   60 Call: _id . _leftparen Actuals _rightparen
   61     | _id . _period _id _leftparen Actuals _rightparen

    _period     shift, and go to state 78
    _leftparen  shift, and go to state 79

    _period   [reduce using rule 56 (Lvalue)]
    $default  reduce using rule 56 (Lvalue)


State 68

   30 StmtBlock: _leftparen StmtDeclares Stmt . _rightparen

    _rightparen  shift, and go to state 80


State 69

   33 Stmt: Expr . _semicolon Stmt
   39 Expr: Expr . _plus Expr
   40     | Expr . _minus Expr
   41     | Expr . _multiplication Expr
   42     | Expr . _division Expr
   43     | Expr . _mod Expr
   45     | Expr . _less Expr
   46     | Expr . _lessequal Expr
   47     | Expr . _greater Expr
   48     | Expr . _greaterequal Expr
   49     | Expr . _equal Expr
   50     | Expr . _notequal Expr
   51     | Expr . _and Expr
   52     | Expr . _or Expr

    _plus            shift, and go to state 81
    _minus           shift, and go to state 82
    _multiplication  shift, and go to state 83
    _division        shift, and go to state 84
    _mod             shift, and go to state 85
    _less            shift, and go to state 86
    _lessequal       shift, and go to state 87
    _greater         shift, and go to state 88
    _equal           shift, and go to state 89
    _notequal        shift, and go to state 90
    _and             shift, and go to state 91
    _or              shift, and go to state 92
    _semicolon       shift, and go to state 93
    _greaterequal    shift, and go to state 94


State 70

   35 Expr: Lvalue . _assignop Expr
   37     | Lvalue .
   57 Lvalue: Lvalue . _leftbracket Expr _rightbracket
   58       | Lvalue . _period _id
   59       | Lvalue . _assignop Expr

    _assignop     shift, and go to state 95
    _period       shift, and go to state 96
    _leftbracket  shift, and go to state 97

    _assignop     [reduce using rule 37 (Expr)]
    _period       [reduce using rule 37 (Expr)]
    _leftbracket  [reduce using rule 37 (Expr)]
    $default      reduce using rule 37 (Expr)


State 71

   38 Expr: Call .

    $default  reduce using rule 38 (Expr)


State 72

   36 Expr: Constant .

    $default  reduce using rule 36 (Expr)


State 73

   23 Prototype: Type _id _leftparen Formals _rightparen _semicolon . Prototype

    _boolean  shift, and go to state 1
    _double   shift, and go to state 3
    _int      shift, and go to state 4
    _string   shift, and go to state 6
    _id       shift, and go to state 7

    $default  reduce using rule 24 (Prototype)

    Type       go to state 30
    Prototype  go to state 98


State 74

   55 Expr: _newarray _leftparen . _intconstant _comma Type _rightparen

    _intconstant  shift, and go to state 99


State 75

   54 Expr: _readln _leftparen . _rightparen

    _rightparen  shift, and go to state 100


State 76

   39 Expr: Expr . _plus Expr
   40     | Expr . _minus Expr
   41     | Expr . _multiplication Expr
   42     | Expr . _division Expr
   43     | Expr . _mod Expr
   44     | _minus Expr .
   45     | Expr . _less Expr
   46     | Expr . _lessequal Expr
   47     | Expr . _greater Expr
   48     | Expr . _greaterequal Expr
   49     | Expr . _equal Expr
   50     | Expr . _notequal Expr
   51     | Expr . _and Expr
   52     | Expr . _or Expr

    _less          shift, and go to state 86
    _lessequal     shift, and go to state 87
    _greater       shift, and go to state 88
    _equal         shift, and go to state 89
    _notequal      shift, and go to state 90
    _and           shift, and go to state 91
    _or            shift, and go to state 92
    _greaterequal  shift, and go to state 94

    $default  reduce using rule 44 (Expr)


State 77

   39 Expr: Expr . _plus Expr
   40     | Expr . _minus Expr
   41     | Expr . _multiplication Expr
   42     | Expr . _division Expr
   43     | Expr . _mod Expr
   45     | Expr . _less Expr
   46     | Expr . _lessequal Expr
   47     | Expr . _greater Expr
   48     | Expr . _greaterequal Expr
   49     | Expr . _equal Expr
   50     | Expr . _notequal Expr
   51     | Expr . _and Expr
   52     | Expr . _or Expr
   53     | _not Expr .

    _less          shift, and go to state 86
    _lessequal     shift, and go to state 87
    _greater       shift, and go to state 88
    _equal         shift, and go to state 89
    _notequal      shift, and go to state 90
    _and           shift, and go to state 91
    _or            shift, and go to state 92
    _greaterequal  shift, and go to state 94

    $default  reduce using rule 53 (Expr)


State 78

   61 Call: _id _period . _id _leftparen Actuals _rightparen

    _id  shift, and go to state 101


State 79

   60 Call: _id _leftparen . Actuals _rightparen

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 102
    Lvalue    go to state 70
    Call      go to state 71
    Actuals   go to state 103
    Constant  go to state 72


State 80

   30 StmtBlock: _leftparen StmtDeclares Stmt _rightparen .

    $default  reduce using rule 30 (StmtBlock)


State 81

   39 Expr: Expr _plus . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 104
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 82

   40 Expr: Expr _minus . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 105
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 83

   41 Expr: Expr _multiplication . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 106
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 84

   42 Expr: Expr _division . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 107
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 85

   43 Expr: Expr _mod . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67

    Expr      go to state 108
    Lvalue    go to state 70
    Call      go to state 71
    Constant  go to state 72


State 86

   45 Expr: Expr _less . Expr

    _newarray         shift, and go to state 59
    _readln           shift, and go to state 60
    _minus            shift, and go to state 61
    _not              shift, and go to state 62
    _intconstant      shift, and go to state 63
    _doubleconstant   shift, and go to state 64
    _stringconstant   shift, and go to state 65
    _booleanconstant  shift, and go to state 66
    _id               shift, and go to state 67
